--- a/AMTS/Properties/Resources.resx
+++ b/AMTS/Properties/Resources.resx
@@ -238,4 +238,7 @@
   <data name="RSS" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\RSS.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="MyriadPro" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MyriadPro.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
